Tutorial-Start_to_Finish-Curvilinear_BCs: Spherical, Cylindrical, and CurviBoundaryConditions module all generate results in agreement with original SENR code!

--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -146,7 +146,7 @@
     "\n",
     "In Step 2.B.1 below, we set the middle column of the table for each gridfunction, and Step 2.B.2 sets the rightmost column.\n",
     "\n",
-    "### Step 2.B.1: Set parity type for each gridfunction, based on its name:\n",
+    "### Step 2.B.1: Set parity type for each gridfunction, based on the digits at the end of its name\n",
     "\n",
     "For example, if the gridfunction name ends with \"01\", then (based on the table above) the \"set_parity_types()\" function below will set the parity_type of that gridfunction to 5. We can be assured this is a robust algorithm, because gri.register_gridfunctions() in grid.py will throw an error if a gridfunction base name ends in an integer. \n",
     "\n",
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,13 +850,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -864,8 +857,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Printing diff between original SENR and this code. No diff = PASS!\n",
+      "Finished printing diff\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo \"Printing diff between original SENR and this code. No diff = PASS!\"\n",
+    "!diff CurviBoundaryConditions/out4x4x4-Spherical-NGHOSTS4oFD.txt CurviBoundaryConditions/SENRout4x4x4-Spherical_NGHOSTS4oFD.txt\n",
+    "!echo \"Finished printing diff\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote to file \"CurviBoundaryConditions/set_parity_conditions.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions/xxCart.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n",
+      "Printing diff between original SENR and this code. No diff = PASS!\n",
+      "Finished printing diff\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "Wrote to file \"CurviBoundaryConditions/set_parity_conditions.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions/xxCart.h\"\n",
+      "Wrote to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n",
+      "Printing diff between original SENR and this code. No diff = PASS!\n",
+      "Finished printing diff\n"
+     ]
+    }
+   ],
+   "source": [
+    "import CurviBoundaryConditions.CurviBoundaryConditions as cbcs\n",
+    "cbcs.Set_up_CurviBoundaryConditions()\n",
+    "\n",
+    "!gcc -O2 -g CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm\n",
+    "!./CurviBC_Playground 4 4 4 Discrete > CurviBoundaryConditions/CBCmodule-out4x4x4-Spherical-NGHOSTS4oFD.txt\n",
+    "!echo \"Printing diff between original SENR and this code. No diff = PASS!\"\n",
+    "!diff CurviBoundaryConditions/CBCmodule-out4x4x4-Spherical-NGHOSTS4oFD.txt CurviBoundaryConditions/SENRout4x4x4-Spherical_NGHOSTS4oFD.txt\n",
+    "!echo \"Finished printing diff\"\n",
+    "\n",
+    "# Then we set the coordinate system for the numerical grid\n",
+    "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Cylindrical\")\n",
+    "rfm.reference_metric()\n",
+    "cbcs.Set_up_CurviBoundaryConditions()\n",
+    "!gcc -O2 -g CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm\n",
+    "!./CurviBC_Playground 4 4 4 Discrete > CurviBoundaryConditions/CBCmodule-out4x4x4-Cylindrical-NGHOSTS4oFD.txt\n",
+    "!echo \"Printing diff between original SENR and this code. No diff = PASS!\"\n",
+    "!diff CurviBoundaryConditions/CBCmodule-out4x4x4-Cylindrical-NGHOSTS4oFD.txt CurviBoundaryConditions/SENRout4x4x4-Cylindrical_NGHOSTS4oFD.txt\n",
+    "!echo \"Finished printing diff\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb to latex\n",
-      "[NbConvertApp] Writing 89976 bytes to Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
+      "[NbConvertApp] Writing 204582 bytes to Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
