--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "### NRPy+ Source Code for this module: \n",
     "1. [BSSN/BrillLindquist.py](../edit/BSSN/BrillLindquist.py); [\\[**tutorial**\\]](Tutorial-ADM_Initial_Data-Brill-Lindquist.ipynb): Brill-Lindquist initial data; sets all ADM variables in Cartesian basis: \n",
-    "1. [BSSN/ADMCartesian_to_BSSNCurvilinearID.py](../edit/BSSN/ADMCartesian_to_BSSNCurvilinearID.py); [\\[**tutorial**\\]](Tutorial-ADM_Initial_Data-Converting_ADMCartesian_to_BSSNCurvilinear.ipynb): Cartesian ADM$\\to$Curvilinear BSSN converter function\n",
+    "1. [BSSN/ADMSpherical_or_Cartesian_to_BSSNCurvilinear.py](../edit/BSSN/ADMSpherical_or_Cartesian_to_BSSNCurvilinear.py); [\\[**tutorial**\\]](Tutorial-ADM_Initial_Data-Converting_ADMSpherical_or_Cartesian_to_BSSNCurvilinear.ipynb): Spherical/Cartesian ADM$\\to$Curvilinear BSSN converter function\n",
     "1. [BSSN/BSSN_ID_function_string.py](../edit/BSSN/BSSN_ID_function_string.py): Sets up the C code string enabling initial data be set up in a point-by-point fashion\n",
     "1. [BSSN/BSSN_Constraints.py](../edit/BSSN/BSSNConstraints.py); [\\[**tutorial**\\]](Tutorial-BSSNConstraints.ipynb): Hamiltonian constraint in BSSN curvilinear basis/coordinates\n",
     "1. [BSSN/BSSN_RHSs.py](../edit/BSSN/BSSN_RHSs.py); [\\[**tutorial**\\]](Tutorial-BSSNCurvilinear.ipynb): Generates the right-hand sides for the BSSN evolution equations in singular, curvilinear coordinates\n",
@@ -136,7 +136,7 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Finished in 33.2902770042 seconds.\n"
+      "Finished in 39.5755331516 seconds.\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
      "output_type": "stream",
      "text": [
       "Generating C code for Hamiltonian constraint\n",
-      "Finished in 10.0579149723 seconds.\n"
+      "Finished in 10.3641898632 seconds.\n"
      ]
     }
    ],
@@ -724,13 +724,13 @@
      "text": [
       "Now compiling, should take ~10 seconds...\n",
       "\n",
-      "Finished in 7.85362386703 seconds. Now running at low-resolution. Should take ~25 seconds...\n",
+      "Finished in 7.94106316566 seconds. Now running at low-resolution. Should take ~25 seconds...\n",
       "\n",
-      "\u001b[2KIt: 1100 t=7.50 | 100.0%; ETA 0 s | t/h 1876.53 | gp/s 5.28e+05\n",
-      "Finished in 14.4206089973 seconds, now running at higher-resolution. Should take ~75 seconds...\n",
+      "\u001b[2KIt: 1100 t=7.50 | 100.0%; ETA 0 s | t/h 1879.63 | gp/s 5.29e+05\n",
+      "Finished in 14.4035608768 seconds, now running at higher-resolution. Should take ~75 seconds...\n",
       "\n",
-      "\u001b[2KIt: 1956 t=7.50 | 100.0%; ETA 0 s | t/h 608.28 | gp/s 5.41e+05\n",
-      "Finished in 44.4355108738 seconds.\n"
+      "\u001b[2KIt: 1956 t=7.50 | 100.0%; ETA 0 s | t/h 607.02 | gp/s 5.40e+05\n",
+      "Finished in 44.5322880745 seconds.\n"
      ]
     }
    ],
