--- a/Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "### NRPy+ Source Code for this module: [BSSN/ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinearID.py](../edit/BSSN/ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinearID.py)\n",
     "\n",
-    "**This module is meant for use only with initial data that can be represented exactly in ADM form, either in the Spherical or Cartesian basis. I.e., the ADM variables are given $\\left\\{\\gamma_{ij}, K_{ij}, \\alpha, \\beta^i\\right\\}$ *exactly* as functions of $(r,\\theta,\\phi)$ or $(x,y,z)$, respectively. If instead the initial data are given only numerically (e.g., through an initial data solver), then [the Numerical-ADM-Spherical/Cartesian-to-BSSNCurvilinear module](Tutorial-ADM_Initial_Data-Converting_Numerical_ADMSpherical_or_Cartesian_to_BSSNCurvilinear.ipynb) will need to be used instead.** \n",
+    "**This module is meant for use only with initial data that can be represented exactly in ADM form, either in the Spherical or Cartesian basis. I.e., the ADM variables are given $\\left\\{\\gamma_{ij}, K_{ij}, \\alpha, \\beta^i\\right\\}$ *exactly* as functions of $(r,\\theta,\\phi)$ or $(x,y,z)$, respectively. If instead the initial data are given only numerically (e.g., through an initial data solver), then [the Numerical-ADM-Spherical/Cartesian-to-BSSNCurvilinear module](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) will need to be used instead.** \n",
     "\n",
     "Given the ADM variables:\n",
     "\n",
@@ -375,11 +375,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5: Code Validation; Confirm that the output from this tutorial module agrees with the module [BSSN.ADMSpherical_or_Cartesian_to_BSSNCurvilinear](../edit/BSSN/ADMSpherical_or_Cartesian_to_BSSNCurvilinear.py)\n",
+    "## Step 5: Code Validation; Confirm that the output from this tutorial module agrees with the module [BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear](../edit/BSSN/ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear.py)\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for BrillLindquist initial data between\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ [BSSN.ADMSpherical_or_Cartesian_to_BSSNCurvilinear](../edit/BSSN/ADMSpherical_or_Cartesian_to_BSSNCurvilinear.py) module.\n",
+    "2. the NRPy+ [BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear](../edit/BSSN/ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear.py) module.\n",
     "\n",
     "By default, we analyze these expressions in Spherical coordinates, though other coordinate systems may be chosen."
    ]
@@ -395,7 +395,7 @@
      "text": [
       "initialize_param() minor warning: Did nothing; already initialized parameter UIUCBlackHole::M\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter UIUCBlackHole::chi\n",
-      "Consistency check between ADMSpherical_or_Cartesian_to_BSSNCurvlinearID tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
+      "Consistency check between this tutorial module and BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear NRPy+ module: ALL SHOULD BE ZERO.\n",
       "cf - mod_cf = 0\n",
       "trK - mod_trK = 0\n",
       "alpha - mod_alpha = 0\n",
@@ -431,13 +431,13 @@
    ],
    "source": [
     "import BSSN.UIUCBlackHole as uibh\n",
-    "import BSSN.ADMSpherical_or_Cartesian_to_BSSNCurvilinear as ADMtoBSSN\n",
+    "import BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear as ADMtoBSSN\n",
     "returnfunction = uibh.UIUCBlackHole()\n",
     "mod_cf,mod_hDD,mod_lambdaU,mod_aDD,mod_trK,mod_alpha,mod_vetU,mod_betU = \\\n",
     "    ADMtoBSSN.Convert_Spherical_or_Cartesian_ADM_to_BSSN_curvilinear(\"Spherical\",uibh.Sph_r_th_ph, \n",
     "                                            uibh.gammaSphDD, uibh.KSphDD, uibh.alphaSph, uibh.betaSphU, uibh.BSphU)\n",
     "\n",
-    "print(\"Consistency check between ADMSpherical_or_Cartesian_to_BSSNCurvlinearID tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
+    "print(\"Consistency check between this tutorial module and BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
     "print(\"cf - mod_cf = \" + str(cf - mod_cf))\n",
     "print(\"trK - mod_trK = \" + str(trK - mod_trK))\n",
