Add LaTeX output to a couple more notebooks

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb
@@ -224,7 +224,9 @@
    "source": [
     "### Interpolating the TOV data file as needed\n",
     "\n",
-    "The TOV data file just written stored $(r,\\rho(r),P(r),M(r),e^{\\nu(r)})$\n",
+    "The TOV data file just written stored $(r,\\rho(r),P(r),M(r),e^{\\nu(r)})$.\n",
+    "\n",
+    "**METRIC DATA IN TERMS OF ADM QUANTITIES**\n",
     "\n",
     "The [TOV line element](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation) is written (in the $-+++$ form):\n",
     "$$\n",
@@ -250,14 +252,37 @@
     "\\gamma_{\\phi\\phi} &= r^2 \\sin^2 \\theta \\\\\n",
     "\\end{align}\n",
     "\n",
+    "**STRESS-ENERGY TENSOR $T^{\\mu\\nu}$**\n",
+    "\n",
     "We will also need the stress-energy tensor $T^{\\mu\\nu}$. [As discussed here](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation), the stress-energy tensor is diagonal:\n",
     "\n",
     "\\begin{align}\n",
     "T^t_t &= -\\rho \\\\\n",
-    "T^i_j &= P \\delta^i_j.\n",
+    "T^i_j &= P \\delta^i_j \\\\\n",
+    "\\text{All other components of }T^\\mu_\\nu &= 0.\n",
     "\\end{align}\n",
     "\n",
-    "Therefore,\n",
+    "Since $\\beta^i=0$ the inverse metric expression simplifies to (Eq. 4.49 in [Gourgoulhon](https://arxiv.org/pdf/gr-qc/0703035.pdf)):\n",
+    "$$\n",
+    "g^{\\mu\\nu} = \\begin{pmatrix} \n",
+    "-\\frac{1}{\\alpha^2} & \\frac{\\beta^i}{\\alpha^2} \\\\\n",
+    "\\frac{\\beta^i}{\\alpha^2} & \\gamma^{ij} - \\frac{\\beta^i\\beta^j}{\\alpha^2}\n",
+    "\\end{pmatrix} =\n",
+    "\\begin{pmatrix} \n",
+    "-\\frac{1}{\\alpha^2} & 0 \\\\\n",
+    "0 & \\gamma^{ij}\n",
+    "\\end{pmatrix},\n",
+    "$$\n",
+    "\n",
+    "and since the 3-metric is diagonal we get\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\gamma^{rr} &= \\left(1 - \\frac{2M(r)}{r}\\right)\\\\\n",
+    "\\gamma^{\\theta\\theta} &= \\frac{1}{r^2} \\\\\n",
+    "\\gamma^{\\phi\\phi} &= \\frac{1}{r^2 \\sin^2 \\theta}.\n",
+    "\\end{align}\n",
+    "\n",
+    "Thus raising $T^\\mu_\\nu$ yields a diagonal $T^{\\mu\\nu}$\n",
     "\n",
     "\\begin{align}\n",
     "T^{tt} &= -g^{tt} \\rho = \\frac{1}{\\alpha^2} \\rho = e^{-\\nu(r)} \\rho \\\\\n",
@@ -293,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -406,7 +431,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished in 9.69538187981 seconds.\n"
+      "Finished in 8.99923992157 seconds.\n"
      ]
     }
    ],
@@ -465,7 +490,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing BSSN/TOV_Playground.c\n"
+      "Overwriting BSSN/TOV_Playground.c\n"
      ]
     }
    ],
@@ -630,9 +655,6 @@
     "#include \"xxCart.h\"\n",
     "        int idx = IDX3(i0,i1,i2);\n",
     "        printf(\"%e %e %e %e\\n\",xCart[0],xCart[1], evol_gfs[IDX4pt(CFGF,idx)],log10(fabs(aux_gfs[IDX4pt(HGF,idx)])));\n",
-    "        //     printf(\"%e %e %e %e %e %e %e %e %e\\n\",xCart[0],xCart[1],xCart[2], aux_gfs[IDX4pt(HGF,idx)],evol_gfs[IDX4pt(CFGF,idx)],\n",
-    "        //            evol_gfs[IDX4pt(ALPHAGF,idx)],evol_gfs[IDX4pt(VETU0GF,idx)],evol_gfs[IDX4pt(HDD00GF,idx)],\n",
-    "        //            evol_gfs[IDX4pt(LAMBDAU0GF,idx)]);\n",
     "    }\n",
     "\n",
     "    /* Step 4: Free all allocated memory */\n",
@@ -671,17 +693,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now plot the single-black-hole initial data\n",
+    "## Now plot the single-neutron-star initial data\n",
     "\n",
-    "Here we plot the evolved conformal factor of these initial data on a 2D grid, such that darker colors imply stronger gravitational fields. Hence, we see the single black holes centered at the origin: $x/M=y/M=z/M=0$, where $M$ is an arbitrary mass scale (conventionally the [ADM mass](https://en.wikipedia.org/w/index.php?title=ADM_formalism&oldid=846335453) is chosen), and our formulation of Einstein's equations adopt $G=c=1$ [geometrized units](https://en.wikipedia.org/w/index.php?title=Geometrized_unit_system&oldid=861682626)."
+    "Here we plot the conformal factor of these initial data on a 2D grid, such that darker colors imply stronger gravitational fields. Hence, we see the single neutron star centered at the origin: $x/M=y/M=z/M=0$, where $M$ is an arbitrary mass scale (conventionally the [ADM mass](https://en.wikipedia.org/w/index.php?title=ADM_formalism&oldid=846335453) is chosen), and our formulation of Einstein's equations adopt $G=c=1$ [geometrized units](https://en.wikipedia.org/w/index.php?title=Geometrized_unit_system&oldid=861682626)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -837,6 +852,37 @@
     "legend = ax.legend(loc='lower right', shadow=True, fontsize='x-large')\n",
     "legend.get_frame().set_facecolor('C1')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb to latex\n",
+      "[NbConvertApp] Writing 86908 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
  ],
