Add TOV initial data validation module to NRPy+ tutorial main page

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb
@@ -1165,8 +1165,8 @@
     "                REAL xyz_or_rthph[3] =  {xx0,xx1,xx2}; //FIXME\n",
     "                \n",
     "                // FIRST INTERPOLATE TO SET THE ADM AND TMUNU QUANTITIES\n",
-    "                ID_TOV_ADM_quantities(\n",
-    "                    xyz_or_rthph, TOV_in,\n",
+    "                ID_TOV_ADM_quantities(xyz_or_rthph, TOV_in,\n",
+    "\n",
     "                    &gammaDD00,&gammaDD01,&gammaDD02,&gammaDD11,&gammaDD12,&gammaDD22,\n",
     "                    &KDD00,&KDD01,&KDD02,&KDD11,&KDD12,&KDD22,\n",
     "                    &alpha,  &betaU0,&betaU1,&betaU2,  &BU0,&BU1,&BU2);\n",
