--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -63,9 +63,9 @@
     "        + *Simulation example*:\n",
     "            + **Start-to-Finish Example**: [Colliding black holes!](Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb)\n",
     "    + [**Numerical** ADM Spherical/Cartesian to BSSN Curvilinear Initial Data Conversion](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) (Use this module for initial data conversion if the initial data are provided by an initial data solver, and are thus known to roundoff error at best. The BSSN quantity  $\\lambda^i$ will be computed using finite-difference derivatives from given ADM quantities.)\n",
-    "        + *Initial data validation module* (note that UIUC black hole initial data are *exact*; however we choose to set them up as though they were only known numerically as a code validation test):\n",
+    "        + *Initial data validation modules* (Note that UIUC black hole initial data are *exact*; however we choose to set them up as though they were only known numerically, as a code validation test. TOV initial data are generated via [the solution of a system of ODEs](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation), thus are known only numerically):\n",
     "            + **Start-to-Finish Example**: [Spinning UIUC Black Hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_spinning_UIUC_BH_initial_data.ipynb)\n",
-    "\n",
+    "            + **Start-to-Finish Example**: [Neutron star (TOV solution) initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb)\n",
     "    + Application (in progress) [Adding the $8\\pi T^{\\mu\\nu}$ source terms to the BSSN Equations](Tutorial-BSSNCurvilinear_Plus_Matter_Sources.ipynb)"
    ]
   }
