Adding in a function to copy initial data to other timelevels.

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -771,9 +771,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will also need to use the conservative to primitive solver from the old version of $\\texttt{GiRaFFE}$, included here for convenience. It is slightly modified to use our new variable names and to otherwise work with the slightly different scheduler.\n",
-    "TODO: Expand on this once it is fixed!\n",
-    "* Added function to compute $g^{ij}$ and $g$"
+    "We will also need to use the conservative to primitive solver from the old version of $\\texttt{GiRaFFE}$, included here for convenience. It is slightly modified to use our new variable names and to otherwise work with the slightly different scheduler. It also computes the inverse and determinant of the three metric."
    ]
   },
   {
@@ -1371,6 +1369,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Since the ETK thorn Boundary will access all three timelevels for our evolved variables, we will need to make sure that those timelevels actually contain data at time zero. So, we will copy initial data to both other timelevels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_HO/src/postpostinitial__copy_timelevels.c\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile GiRaFFE_HO/src/postpostinitial__copy_timelevels.c\n",
+    "//-------------------------------------------------\n",
+    "// Stuff to run right after initial data is set up\n",
+    "//-------------------------------------------------\n",
+    "\n",
+    "#include \"cctk.h\"\n",
+    "#include <cstdio>\n",
+    "#include <cstdlib>\n",
+    "#include \"cctk_Arguments.h\"\n",
+    "#include \"cctk_Functions.h\"\n",
+    "#include \"cctk_Parameters.h\"\n",
+    "#include \"Symmetry.h\"\n",
+    "#include \"GiRaFFE_headers.h\"\n",
+    "\n",
+    "extern \"C\" void GiRaFFE_HO_PostPostInitial__Copy_Timelevels(CCTK_ARGUMENTS) {\n",
+    "  DECLARE_CCTK_ARGUMENTS;\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "\n",
+    "\n",
+    "  //------------------------------------------------------------------\n",
+    "  // FILL _p AND _p_p TIMELEVELS. Probably don't need to do this if \n",
+    "  // Carpet::init_fill_timelevels=yes  and\n",
+    "  // MoL::initial_data_is_crap = yes\n",
+    "  // NOTE: We don't fill metric data here.\n",
+    "  // FIXME: Do we really need this?\n",
+    "\n",
+    "#pragma omp parallel for\n",
+    "  for(int k=0;k<cctk_lsh[2];k++) for(int j=0;j<cctk_lsh[1];j++) for(int i=0;i<cctk_lsh[0];i++) {\n",
+    "        const int index = CCTK_GFINDEX3D(cctkGH,i,j,k);\n",
+    "\n",
+    "        StildeD0_p[index] = StildeD0[index]; \n",
+    "        StildeD1_p[index] = StildeD1[index];\n",
+    "        StildeD2_p[index] = StildeD2[index];\n",
+    "\n",
+    "        psi6Phi_p[index] = psi6Phi[index];\n",
+    "        AD0_p[index] = AD0[index]; \n",
+    "        AD1_p[index] = AD1[index];\n",
+    "        AD2_p[index] = AD2[index];\n",
+    "\n",
+    "        StildeD0_p_p[index] = StildeD0[index]; \n",
+    "        StildeD1_p_p[index] = StildeD1[index];\n",
+    "        StildeD2_p_p[index] = StildeD2[index];\n",
+    "\n",
+    "        psi6Phi_p_p[index] = psi6Phi[index];\n",
+    "        AD0_p_p[index] = AD0[index]; \n",
+    "        AD1_p_p[index] = AD1[index];\n",
+    "        AD2_p_p[index] = AD2[index];\n",
+    "      }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='step2b'></a>\n",
     "\n",
     "#### Step 2.2: CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
@@ -1390,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1597,7 @@
     "  \"robin\"     :: \"Robin (phi(r) = C/r) boundary condition\"\n",
     "  \"zero\"      :: \"Zero (Dirichlet, phi=0) boundary condition\"\n",
     "  \"none\"      :: \"Apply no boundary condition\"\n",
-    "} \"static\"\n",
+    "} \"radiation\"\n",
     "\n",
     "restricted:\n",
     "CCTK_INT timelevels \"Number of active timelevels\" STEERABLE=RECOVER\n",
@@ -1618,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1738,21 +1808,21 @@
     "  WRITES: GiRaFFE_HO::psi6Phi_rhs(Interior)\n",
     "} \"Sets the GiRaFFE right-hand sides\"\n",
     "\n",
-    "#schedule GiRaFFE_HO_SelectBCs in MoL_PostStep\n",
-    "#{\n",
-    "#  LANG: C\n",
-    "#  OPTIONS: level\n",
-    "#  SYNC: GiRaFFE_vars\n",
-    "#} \"Boundaries of GiRaFFE equations\"\n",
+    "schedule GiRaFFE_HO_SelectBCs in MoL_PostStep\n",
+    "{\n",
+    "  LANG: C\n",
+    "  OPTIONS: level\n",
+    "  SYNC: GiRaFFE_vars\n",
+    "} \"Boundaries of GiRaFFE equations\"\n",
     "\n",
-    "#schedule GROUP ApplyBCs as GiRaFFE_HO_ApplyBCs in MoL_PostStep after GiRaFFE_HO_SelectBCs\n",
-    "#{\n",
-    "#} \"Apply boundary conditions\"\n",
+    "schedule GROUP ApplyBCs as GiRaFFE_HO_ApplyBCs in MoL_PostStep after GiRaFFE_HO_SelectBCs\n",
+    "{\n",
+    "} \"Apply boundary conditions\"\n",
     "\n",
     "\n",
-    "#schedule GROUP ApplyBCs as GiRaFFE_HO_ApplyBCs at POSTRESTRICT\n",
-    "#{\n",
-    "#} \"Apply boundary conditions\"\n",
+    "schedule GROUP ApplyBCs as GiRaFFE_HO_ApplyBCs at POSTRESTRICT\n",
+    "{\n",
+    "} \"Apply boundary conditions\"\n",
     "\n",
     "schedule driver_A_to_B as driver_A_to_B in HydroBase_Boundaries after GiRaFFE_HO_SelectBCs\n",
     "{\n",
@@ -1837,7 +1907,12 @@
     "  WRITES: GiRaFFE_HO::BU1(Everywhere)\n",
     "  WRITES: GiRaFFE_HO::BU2(Everywhere)\n",
     "} \"Calculates the B-field from the vector potential\"\n",
-    "\n"
+    "\n",
+    "# Copy data to other timelevels.\n",
+    "schedule GiRaFFE_HO_PostPostInitial__Copy_Timelevels in GiRaFFE_PostPostInitial as mhdpostid after initial_driver_A_to_B after p2c\n",
+    "{\n",
+    "  LANG: C\n",
+    "} \"Compute post-initialdata quantities\""
    ]
   },
   {
@@ -1856,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1870,7 +1945,8 @@
    "source": [
     "%%writefile GiRaFFE_HO/src/make.code.defn\n",
     "SRCS = GiRaFFE.c driver_conserv_to_prims_FFE.C \\\n",
-    "       GiRaFFE_HydroBase_conversion.c"
+    "       GiRaFFE_HydroBase_conversion.c \\\n",
+    "       postpostinitial__copy_timelevels.c"
    ]
   },
   {
@@ -1882,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1966,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb to latex\n",
-      "[NbConvertApp] Writing 158798 bytes to Tutorial-ETK_thorn-GiRaFFE_Higher_Order.tex\n",
+      "[NbConvertApp] Writing 163188 bytes to Tutorial-ETK_thorn-GiRaFFE_Higher_Order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
