Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data, BSSN_RHSs: implement and select MaximalSlicing lapse condition

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
@@ -82,7 +82,7 @@
     "import BSSN.BSSN_RHSs as rhs\n",
     "par.set_parval_from_str(\"BSSN.BSSN_RHSs::ConformalFactor\",\"W\")\n",
     "par.set_parval_from_str(\"BSSN.BSSN_RHSs::ShiftEvolutionOption\", \"Frozen\")\n",
-    "par.set_parval_from_str(\"BSSN.BSSN_RHSs::LapseEvolutionOption\", \"Frozen\")\n",
+    "par.set_parval_from_str(\"BSSN.BSSN_RHSs::LapseEvolutionOption\", \"MaximalSlicing\")\n",
     "rhs.BSSN_RHSs()\n",
     "\n",
     "#################\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
      "output_type": "stream",
      "text": [
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Finished in 44.3141391277 seconds.\n"
+      "Finished in 49.2722530365 seconds.\n"
      ]
     }
    ],
@@ -1050,7 +1050,7 @@
      "output_type": "stream",
      "text": [
       "Starting to generate the C code for the Hamiltonian constraint...\n",
-      "Finished in 9.84855294228 seconds.\n"
+      "Finished in 10.9022068977 seconds.\n"
      ]
     }
    ],
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1582,14 +1582,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^C2KIt: 637 t=0.98 | 65.1%; ETA 8 s | t/h 231.11 | gp/s 5.14e+055\n"
+      "\u001b[2KIt: 978 t=1.50 | 100.0%; ETA 0 s | t/h 153.95 | gp/s 3.43e+05\n"
      ]
     }
    ],
@@ -1615,14 +1615,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2KProcessing file out96-00000600.txt\r"
+      "\u001b[2KProcessing file out96-00000900.txt\r"
      ]
     }
    ],
@@ -1682,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
