--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1392,15 +1392,16 @@
     "//-------------------------------------------------\n",
     "\n",
     "#include \"cctk.h\"\n",
-    "#include <cstdio>\n",
-    "#include <cstdlib>\n",
+    "//#include <cstdio>\n",
+    "//#include <cstdlib>\n",
     "#include \"cctk_Arguments.h\"\n",
     "#include \"cctk_Functions.h\"\n",
     "#include \"cctk_Parameters.h\"\n",
     "#include \"Symmetry.h\"\n",
-    "#include \"GiRaFFE_headers.h\"\n",
+    "//#include \"GiRaFFE_headers.h\"\n",
     "\n",
-    "extern \"C\" void GiRaFFE_HO_PostPostInitial__Copy_Timelevels(CCTK_ARGUMENTS) {\n",
+    "//extern \"C\" \n",
+    "void GiRaFFE_HO_PostPostInitial__Copy_Timelevels(CCTK_ARGUMENTS) {\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "\n",
@@ -1688,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1909,7 +1910,7 @@
     "} \"Calculates the B-field from the vector potential\"\n",
     "\n",
     "# Copy data to other timelevels.\n",
-    "schedule GiRaFFE_HO_PostPostInitial__Copy_Timelevels in GiRaFFE_PostPostInitial as mhdpostid after initial_driver_A_to_B after p2c\n",
+    "schedule GiRaFFE_HO_PostPostInitial__Copy_Timelevels in MoL_PostStep as mhdpostid after initial_driver_A_to_B before GiRaFFE_HO_ApplyBCs\n",
     "{\n",
     "  LANG: C\n",
     "} \"Compute post-initialdata quantities\""
