Some test results for the new GiRaFFE thorn.

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -87,7 +87,7 @@
     "gho.GiRaFFE_Higher_Order()\n",
     "\n",
     "# Step 1: Set the finite differencing order to 4.\n",
-    "#par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 6)\n"
+    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 6)\n"
    ]
   },
   {
@@ -1910,7 +1910,8 @@
     "} \"Calculates the B-field from the vector potential\"\n",
     "\n",
     "# Copy data to other timelevels.\n",
-    "schedule GiRaFFE_HO_PostPostInitial__Copy_Timelevels in MoL_PostStep as mhdpostid after initial_driver_A_to_B before GiRaFFE_HO_ApplyBCs\n",
+    "#schedule GiRaFFE_HO_PostPostInitial__Copy_Timelevels in MoL_PostStep as mhdpostid after initial_driver_A_to_B before GiRaFFE_HO_ApplyBCs\n",
+    "schedule GiRaFFE_HO_PostPostInitial__Copy_Timelevels in GiRaFFE_Initial as mhdpostid after initial_driver_A_to_B \n",
     "{\n",
     "  LANG: C\n",
     "} \"Compute post-initialdata quantities\""
@@ -1959,14 +1960,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb to latex\r\n"
+      "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb to latex\n",
+      "[NbConvertApp] Writing 163337 bytes to Tutorial-ETK_thorn-GiRaFFE_Higher_Order.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
      ]
     }
    ],
